  Imager's drawing functions do.
- added trivial multiple master support via the FT2 driver
- added .pcf and .pcf.gz to the list of extensions supported by ft2
- the tiff reader now puts warning messages produced during reading into
  the i_warning tag.
  Resolves: https://rt.cpan.org/Ticket/Display.html?id=8722
- the i_xres and i_yres tags are now stored in a resolution similar
  to their source.
  Resolves: https://rt.cpan.org/Ticket/Display.html?id=8520
- added tiff_resolutionunit_name tag when reading tiff files
- Makefile.PL now attempts to use freetype-config to configure freetype 2
  and pkg-config to configure libpng.
- avoid complaining about include/lib directories we pull from 
  perl's config or we have built-in
- Makefile.PL now builds imconfig.h with #defines for libraries
  present (and for the GIF library version) rather than putting them
  into CFLAGS
- scanning for required include files is now down by directory rather
  than by file, using -e to check for the existence for a file rather than
  doing an eq against every filename in the directory.
- previously we only checked a candidate include directory for freetype.h
  to consider it a valid FT1.x include directory.  We now check if it
  contains fterrors.h too, if it does, then it's from a FT2 installation
  and we ignore it.
- Makefile.PL now accepts command-line options to set include and library
  directories and to enable/disable drivers.
- added simple examples to most of the filters documented in 
  Imager::Filters
- calculate the sum of the coefficients once rather than for every
  pixel in i_conv() (convolution filter)
- explicitly document there are no PNG specific tags.
- more examples in Imager::Draw

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
